# devops-project

./: .pre-commit-config.yaml  mise.toml
.devcontainer/: Dockerfile
.github/workflows/: backend-tests.yaml
scripts/: setup  setup_project
src/backend/: Dockerfile  docker-start-backend  pyproject.toml
src/frontend/: Dockerfile  docker-start-frontend  pyproject.toml
src/frontend/src/frontend/templates/: index.html
